[package]
name = "mdbook-check-missing-md"
version = "0.1.0"
authors = ["staticdev <staticdev-support@proton.me>"]
description = "A backend for `mdbook` which will find Markdowns you forgot on SUMMARY.md."
license = "MIT"
edition = "2021"
repository = "https://github.com/staticdev/mdbook-check-missing-md"
readme = "README.md"

[[bin]]
name = "mdbook-check-missing-md"
doc = false

[dependencies]
anyhow = "1.0.28"
dunce = "1.0.0"
mdbook = { version = "0.4", default-features = false }
serde_json = "1.0"
structopt = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.3"
